--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -1,4 +1,7 @@
 body {
+  background-color: rgb(57, 91, 100);
+  color: rgb(245, 232, 228);
+  font-size: 20px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
