--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -10,7 +10,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/* CSS GLOBAL COLORES*/
+
+:root {
+  --color-card: rgb(31, 29, 54);
 }
