--- a/cliente/src/Components/Card/Card-module.css
+++ b/cliente/src/Components/Card/Card-module.css
@@ -1,11 +1,12 @@
 .Tarjetas{
-    /* background-color: var(--color-card); */
     width: 14rem;
-    /* margin: 10px;
-    padding: 5px 20px 20px 20px; */
+    margin-bottom: 1.5%
 }
 
-/* .Fondo{
-    background-color: var(--color-card);
-} */
+
+@media screen and (max-width: 750px)  {
+    .Tarjetas{
+        margin-bottom: 3%
+    }
+}
 
