--- a/cliente/src/Components/Paginado/Paginado-module.css
+++ b/cliente/src/Components/Paginado/Paginado-module.css
@@ -12,6 +12,7 @@
     margin-top: 7px;
     margin-right: 5px;
     margin-left: 5px;
+    color: white;
 }
 
 .Paginado button{
@@ -23,6 +24,12 @@
     width: 38px;
     height: 38px;
     font-weight: none;
+    color: white;
+}
+
+.Paginado button[disabled]{
+    display: none;
+    
 }
 
 /* @media screen and (max-width: 500px)  {
