--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -1,5 +1,9 @@
 body {
-  background-color: rgb(57, 91, 100);
+  background: url("./Imagenes/fondo\ rick\ y\ morti.png");
+  background-position: center;
+  background-attachment: fixed;
+  height: 100%;
+  background-size: cover;
   color: rgb(245, 232, 228);
   font-size: 20px;
   margin: 0;
