--- a/cliente/src/Components/Paginado/Paginado-module.css
+++ b/cliente/src/Components/Paginado/Paginado-module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 20px;    
 }
 .Paginado h6{
@@ -34,8 +34,8 @@
     transition: 0.8s;
 }
 
-/* @media screen and (max-width: 500px)  {
-    .Paginado h5{
-       display: none;
+@media screen and (max-width: 485px)  {
+    .Paginado{
+        margin-top: 20px;
     }
-} */
+}
