--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -1,3 +1,21 @@
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+body {
+  background: url("./Imagenes/fondo\ rick\ y\ morti.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  margin: 0;
+  margin-bottom: 0px;
+  color: rgb(245, 232, 228);
+  font-size: 20px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   background: url("./Imagenes/fondo\ rick\ y\ morti.png");
   background-position: center;
@@ -5,6 +23,7 @@ body {
   height: 100%;
   background-size: cover;
   color: rgb(245, 232, 228);
+  /* font-family: 'LatoBlack'; */
   font-size: 20px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,6 +31,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* font-family: 'LatoBlack'; */
 }
 
 /* CSS GLOBAL COLORES*/
