--- a/cliente/src/Components/Details/Details-module.css
+++ b/cliente/src/Components/Details/Details-module.css
@@ -31,7 +31,24 @@
     flex-direction: column;
     align-items: center;
     margin: 35px;
-}  
+} 
+.cuerpoDark{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 35px;
+    color: white;
+} 
+
+.cuerpoDark h4{
+    padding-bottom: 5px;
+}
+
+.cuerpoDark h5{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 
 .cuerpo h4{
     padding-bottom: 5px;
@@ -45,15 +62,20 @@
 @media screen and (max-width: 720px)  {
     .ContenedorDetail{
         flex-direction: column;
-    }    
+    }  
+     
 }
 
 @media screen and (max-width: 435px)  {
     .ContenedorDetail{
         width: 255px;
-        height: 535px;
+        height: 575px;
+        justify-content: space-between; 
         
     }
+    .cuerpoDark{
+        margin-top: 0px;
+    }  
     
     .imagenDetail{
         
