--- a/cliente/src/Components/Footer/Footer-module.css
+++ b/cliente/src/Components/Footer/Footer-module.css
@@ -14,9 +14,20 @@
     padding-bottom: 10px;
 }
 
-.tituloFooter{
-    color: black;
-    margin-top: 15px;
+.FooterDark{
+    background-color: black;
+    position: absolute;
+    bottom: 0px;
+    margin-top: auto;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
 .iconosFooter {
@@ -32,6 +43,7 @@
 }
 
 .tituloFooter {
+    margin-top: 15px;
     font-size: 16px;
     margin-left: 15px;
     color: black;
@@ -39,4 +51,24 @@
     font-size: 14px;
 }
 
+.tituloFooterDark{
+    color: white;
+    margin-top: 15px;
+    font-size: 16px;
+    margin-left: 15px;
+    font-family: 'LatoBlack';
+    font-size: 14px;
+}
 
+
+.iconosFooterDark {
+    font-size: 35px;
+    color: white;
+    transition: 150ms;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.iconosFooterDark:hover {
+    color: rgb(41, 52, 98);
+}
