--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -4,26 +4,14 @@ html {
 }
 
 body {
-  background: url("./Imagenes/fondo\ rick\ y\ morti.png");
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  margin: 0;
-  margin-bottom: 0px;
-  color: rgb(245, 232, 228);
-  font-size: 20px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
+  /* background-color: rgb(41, 52, 98); */
   background: url("./Imagenes/fondo\ rick\ y\ morti.png");
   background-position: center;
   background-attachment: fixed;
   height: 100%;
   background-size: cover;
   color: rgb(245, 232, 228);
-  /* font-family: 'LatoBlack'; */
+  font-family: 'LatoBlack';
   font-size: 20px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -31,11 +19,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* font-family: 'LatoBlack'; */
-}
-
-/* CSS GLOBAL COLORES*/
-
-:root {
-  --color-card: rgb(31, 29, 54);
 }
