--- a/cliente/src/Components/Details/Details-module.css
+++ b/cliente/src/Components/Details/Details-module.css
@@ -11,7 +11,6 @@
 
 .CentradoDetailsLoading {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     margin-top: 150px;
 }
@@ -26,7 +25,6 @@
 
 #espacio1{
     width: 350px;
-    /* height: 450px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +32,6 @@
 
 #espacio2{
     width: 550px;
-    /* height: 450px; */
     display: flex;
     justify-content: center;
 }
@@ -43,7 +40,6 @@
     display: flex;
     flex-direction: column;
     width: 450px;
-    /* height: 450px; */
 }
 
 #tittleDetails {
@@ -55,6 +51,10 @@
     height: 300px;
     margin-top: 20px;
     margin-bottom: 25px;
+}
+
+#datosDetail{
+    width: 300px;
 }
 
 #groupButtons{
@@ -72,8 +72,7 @@
     height: 380px;
     width: 475px;
     overflow-y: scroll;
-    font-size: 16px;
-    
+    font-size: 16px; 
 }
 
 .imagenesDetails{
@@ -100,38 +99,199 @@
     margin-top: 140px;
     color: white;
 }
+/*------------------------*/
 
-
-
-
-
-
-
-
-
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1390px) {
     .ContenedorDetail {
-        flex-direction: column;
+        width: 1050px;
     }
 
-}
-
-@media screen and (max-width: 435px) {
-    .ContenedorDetail {
-        width: 255px;
-        height: 575px;
-        justify-content: space-between;
+    #espacio1{
+        width: 250px;
 
     }
+    
+    #espacio2{
+        width: 450px;
 
-    .cuerpoDark {
-        margin-top: 0px;
+    }
+    
+    #espacio3{
+
+        width: 350px;
     }
 
     .imagenDetail {
-
-        width: 255px;
-        height: 255px;
+        width: 200px;
+        height: 200px;
+        margin-bottom: 25px;
     }
 
+    #datosDetail{
+        width: 200px;
+    }
+
+    #dropdooown {
+        height: 380px;
+        width: 375px;
+    }
+
+    .imagenesDetails{
+        height: 468px;
+        width: 325px;
+    }
+
+    .imagenesDetailsVacio{
+        height: 468px;
+        width: 325px;
+    }
+}
+
+@media screen and (max-width: 1090px) {
+    .ContenedorDetail {
+        width: 750px;
+    }
+
+    #espacio1{
+        width: 250px;
+
+    }
+    
+    #espacio2{
+        width: 350px;
+
+    }
+    
+    #espacio3{
+
+        width: 150px;
+    }
+
+    .imagenDetail {
+        width: 200px;
+        height: 200px;
+        margin-bottom: 25px;
+    }
+
+    #datosDetail{
+        width: 200px;
+    }
+
+    #dropdooown {
+        height: 380px;
+        width: 275px;
+    }
+
+    .imagenesDetails{
+        height: 468px;
+        width: 125px;
+    }
+
+    .imagenesDetailsVacio{
+        height: 468px;
+        width: 125px;
+    }
+}
+
+@media screen and (max-width: 780px) {
+    .ContenedorDetail {
+        width: 450px;
+        height: 1500px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    #espacio1{
+        height: 350px;
+    }
+    
+    #espacio2{
+        height: 350px;
+        margin-top: 80px;
+    }
+    
+    #espacio3{
+        height: 350px;
+    }
+
+    .imagenDetail {
+        width: 400px;
+        height: 400px;
+    }
+
+    #datosDetail{
+        width: 400px;   
+    }
+
+    #dropdooown {  
+        height: 380px;
+        width: 400px;
+    }
+
+    .imagenesDetails{
+        height: 300px;
+        width: 400px;
+        margin-bottom: 20px;
+    }
+
+    .imagenesDetailsVacio{
+        height: 300px;
+        width: 400px;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .ContenedorDetail {
+        width: 300px;
+        height: 1300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    #espacio1{
+        height: 350px;
+    }
+    
+    #espacio2{
+        height: 350px;
+        margin-top: -60px;
+    }
+    
+    #espacio3{
+        height: 350px;
+    }
+
+    .imagenDetail {
+        width: 250px;
+        height: 250px;
+    }
+    
+
+    #datosDetail{
+        width: 250px;   
+    }
+
+    #tamañogroupButtons{
+        font-size: 15px;
+    }
+
+    #dropdooown {  
+        height: 380px;
+        width: 250px;
+    }
+
+    .imagenesDetails{
+        height: 300px;
+        width: 200px;
+    }
+
+    .imagenesDetailsVacio{
+        height: 300px;
+        width: 200px;
+    }
 }
