--- a/cliente/src/Components/Home/Home-module.css
+++ b/cliente/src/Components/Home/Home-module.css
@@ -3,3 +3,10 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
+@media screen and (max-width: 485px)  {
+    .CentradoCards{
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+}
