--- a/cliente/src/Components/Paginado/Paginado-module.css
+++ b/cliente/src/Components/Paginado/Paginado-module.css
@@ -35,6 +35,7 @@
 
 @media screen and (max-width: 485px)  {
     .Paginado{
-        margin-top: 20px;
+        /* margin-top: 20px; */
+        /* margin-bottom: 20px; */
     }
 }
