--- a/cliente/src/Components/Details/Details-module.css
+++ b/cliente/src/Components/Details/Details-module.css
@@ -107,12 +107,12 @@
     }
 
     #espacio1{
-        width: 250px;
+        width: 300px;
 
     }
     
     #espacio2{
-        width: 450px;
+        width: 400px;
 
     }
     
@@ -122,13 +122,13 @@
     }
 
     .imagenDetail {
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         margin-bottom: 25px;
     }
 
     #datosDetail{
-        width: 200px;
+        width: 250px;
     }
 
     #dropdooown {
@@ -153,12 +153,12 @@
     }
 
     #espacio1{
-        width: 250px;
+        width: 300px;
 
     }
     
     #espacio2{
-        width: 350px;
+        width: 300px;
 
     }
     
@@ -168,13 +168,13 @@
     }
 
     .imagenDetail {
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         margin-bottom: 25px;
     }
 
     #datosDetail{
-        width: 200px;
+        width: 250px;
     }
 
     #dropdooown {
@@ -219,6 +219,9 @@
     .imagenDetail {
         width: 400px;
         height: 400px;
+    }
+    #tamañogroupButtons{
+        font-size: 18px;
     }
 
     #datosDetail{
